--- a/src/challenges/blog-preview-card/assets/css/main.css
+++ b/src/challenges/blog-preview-card/assets/css/main.css
@@ -1,3 +1,8 @@
-body {
-    background-color: gray;
+.card {
+    margin: auto;
+    width: 300px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 1);
 }
